# MagShockZ

./: .coverage  .gitignore  0001AddtestsuiteforpurefunctionmodulesandCIwork.patch  CLAUDE.md  GridsOSIRISTransfer.ipynb  README.md  check_numerical_instability.py  git-cleanup.sh  osiris_conda.yml  osiris_sys.chablis.gnu  pyproject.toml  run-info  test.ipynb  testing_writeout.txt
FLASH/: FLASH_functions.py  FLASH_test.ipynb  GridsOSIRISTransfer.ipynb  SlicePlotsFLASH.ipynb  background_from_FLASH.ipynb  channel_from_FLASH.ipynb  dens_grid.csv  dens_grid.h5  fitting_functions.py  get_background_from_FLASH.ipynb  get_diamagnetic_cavity.ipynb  get_shadowgraphy_fields.ipynb  mass_ratio_onceandforall.ipynb
FLASH_OSIRIS_interface/: FLASH_OSIRIS_define.py  FLASH_OSIRIS_define_sharable.py  fitting_functions.py  interface_usage.ipynb  main.py  simplified_magshockz.ipynb  simplified_magshockz.py
analysis_notebooks/: analysis_of90deg.ipynb  calculate_nGPUs.ipynb  check_initialization.ipynb  check_initialization1d.ipynb  flash_osiris_compare.py  make_plots_for_poster.py  movie_maker_CLI.py  track_shock_front.py  verify_thermal_velocity.py
analysis_scripts/: calculate_nGPUs.ipynb  check_initialization1d.ipynb  learning_nata.ipynb  make_movie_mp.py  make_pretty_phase_space_plots.py  make_stack_plots.py  peek_at_phasespace2d.ipynb  peek_at_sim1d.ipynb  peek_at_sim2d.ipynb  real_units_to_sim.py
config/: flash_3d_noshield.yaml  magshockz_rqm100_dx0.1.yaml  perlmutter_1.3.1d.yaml  perlmutter_2.3.2d.yaml
docs/: .~lock.The_Spreadsheet.ods#  The_Spreadsheet.ods
input_files/: SBS.1d  (+7 more)
(+403 files in other folders)
